# Ergo

./: ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  ERGO_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MISSING_FEATURES_REVIEW.md  README.md  TEST_COVERAGE_ANALYSIS.md  design_doc.md
.github/workflows/: build.yml
agents/: package.json  run.sh  tasks-example.json  tsconfig.json
agents/src/: agents.ts  index.ts  orchestrator.ts  parallel-tasks.ts  run-single.ts
demos/: CMakeLists.txt  demo_animation.cpp  demo_camera.cpp  demo_easing.cpp  demo_ecs.cpp  demo_framework.hpp  demo_game_object.cpp  demo_input_map.cpp  demo_light.cpp  demo_math.cpp  demo_particle.cpp  demo_particle_emitter_component.cpp  demo_physics2d.cpp  demo_physics3d.cpp  demo_post_process.cpp  demo_profiler.cpp  demo_render_command.cpp  demo_scene_manager.cpp  demo_serialization.cpp  demo_shader.cpp  demo_sprite_animation.cpp  demo_state_machine.cpp  demo_task_system.cpp  demo_text.cpp  demo_time.cpp  demo_ui.cpp  main.cpp
docs/templates/: COMPONENT_SPEC.md  COMPONENT_TEST_DESIGN.md  MODULE_SPEC.md  MODULE_TEST_DESIGN.md
editor/Ergo.Editor/: App.xaml  App.xaml.cs  Ergo.Editor.csproj  MauiProgram.cs
editor/Ergo.Editor.Native/: CMakeLists.txt  editor_api.cpp  editor_api.h  editor_renderer.cpp  editor_renderer.hpp  plugin_api.cpp  plugin_api.h
editor/Ergo.Editor/Controls/: GameView.cs  RenderView.cs  SceneView.cs
editor/Ergo.Editor/Converters/: InvertedBoolConverter.cs
engine/: CMakeLists.txt
engine/animation/: animation_clip.hpp  animation_player.cpp  animation_player.hpp  skeleton.hpp
engine/core/: assert.hpp  camera2d.hpp  camera3d.hpp  concepts.hpp  easing.hpp  game_object.hpp  id_generator.hpp  input_map.cpp  input_map.hpp  job_system.cpp  job_system.hpp  log.cpp  log.hpp  scene_manager.cpp  scene_manager.hpp  serialization.cpp  serialization.hpp  sprite_animation.hpp  state_machine.hpp  task_system.cpp  task_system.hpp  time.hpp  tween.hpp
engine/core/behaviour/: behaviour.hpp  behaviour_registry.hpp  behaviour_tree.cpp  behaviour_tree.hpp  joint.hpp  particle_emitter_component.hpp  player_controller.hpp  spawner.hpp
engine/debug/: debug_draw.cpp  debug_draw.hpp  profiler.hpp
engine/ecs/: archetype.hpp  world.cpp  world.hpp
engine/math/: color.hpp  mat4.hpp  quat.hpp  size2.hpp  transform.hpp  transform3d.hpp  vec2.hpp  vec3.hpp
engine/net/: http_client.cpp  http_client.hpp  net_concepts.hpp  network_manager.cpp  network_manager.hpp  socket.cpp  socket.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
engine/physics/: collider.hpp  collision3d.cpp  collision3d.hpp  collision_shape3d.hpp  cpu_physics.cpp  cpu_physics.hpp  gpu_physics.cpp  gpu_physics.hpp  hit_test.cpp  hit_test.hpp  physics_system.cpp  physics_system.hpp  raycast2d.cpp  raycast2d.hpp  rigid_body.hpp  rigid_body_world.cpp  rigid_body_world.hpp  spatial_grid.cpp  spatial_grid.hpp
engine/plugin/: core_plugins.cpp  core_plugins.hpp  plugin_descriptor.hpp  plugin_registry.cpp  plugin_registry.hpp
engine/render/: command_buffer.hpp  double_buffer.hpp  light.hpp  mesh.hpp  particle_system.cpp  particle_system.hpp  post_process.hpp  render_command.hpp  render_pipeline.cpp  render_pipeline.hpp  skinned_mesh.hpp  skinned_mesh_renderer.cpp  skinned_mesh_renderer.hpp
engine/resource/: fbx_loader.cpp  fbx_loader.hpp  font.hpp  font_loader.cpp  font_loader.hpp  image_loader.cpp  image_loader.hpp  resource_manager.cpp  resource_manager.hpp  texture_handle.hpp  utf8.hpp
engine/shader/: shader_compiler.cpp  shader_compiler.hpp  shader_concepts.hpp  shader_graph.hpp  shader_library.cpp  shader_library.hpp  shader_material.hpp  shader_node.hpp  shader_optimizer.cpp  shader_optimizer.hpp  skinned_mesh_shader.hpp
engine/shaders/: compile.sh  shape2d.vert  sprite.frag  sprite.vert
engine/text/: font_asset.hpp  font_atlas.hpp  font_registry.hpp  glyph.hpp  glyph_cache.hpp  rich_text.cpp  rich_text.hpp  simple_text.hpp  text_layout.cpp  text_layout.hpp  text_renderer.cpp  text_renderer.hpp  text_style.hpp
engine/ui/: ui_canvas.cpp  ui_canvas.hpp  ui_element.hpp  ui_hierarchy.cpp  ui_hierarchy.hpp  ui_image_node.cpp  ui_image_node.hpp  ui_manager.cpp  ui_manager.hpp  ui_node.cpp  ui_node.hpp  ui_widgets.cpp  ui_widgets.hpp
game_interface/: engine_types.h  game_interface.h  plugin_interface.h
runtime/: CMakeLists.txt  dll_loader.cpp  dll_loader.hpp  engine_context.cpp  engine_context.hpp  main.cpp  plugin_loader.cpp  plugin_loader.hpp
samples/shooting/: CMakeLists.txt  bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  game_main.cpp  game_types.hpp  player.cpp  player.hpp
samples/shooting/scenes/: ingame_scene.cpp  ingame_scene.hpp  title_scene.cpp  title_scene.hpp
system/: CMakeLists.txt  platform.hpp
system/audio/: audio_engine.cpp  audio_engine.hpp
system/input/: desktop_input.cpp  desktop_input.hpp  gamepad_input.cpp  gamepad_input.hpp  touch_input.cpp  touch_input.hpp
system/renderer/vulkan/: vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swapchain.cpp  vk_swapchain.hpp
system/window/: android_window.hpp  desktop_window.cpp  desktop_window.hpp  ios_window.hpp
tests/: CMakeLists.txt  main.cpp  test_animation_clip.cpp  test_animation_debug.cpp  test_camera.cpp  test_collision3d.cpp  test_color.cpp  test_core.cpp  test_easing.cpp  test_ecs.cpp  test_ecs_task.cpp  test_framework.hpp  test_game_object.cpp  test_gameplay.cpp  test_hit_test.cpp  test_id_generator.cpp  test_input_map.cpp  test_light.cpp  test_main.cpp  test_mat4.cpp  test_math.cpp  test_particle_emitter_component.cpp  test_physics.cpp  test_physics_extended.cpp  test_physics_system.cpp  test_plugin.cpp  test_post_process.cpp  test_profiler.cpp  test_quat.cpp  test_render.cpp  test_render_command.cpp  test_rigid_body.cpp  test_serialization.cpp  test_shader_graph.cpp  test_size2.cpp  test_spatial_grid.cpp  test_sprite_animation.cpp  test_state_machine.cpp  test_task_system.cpp  test_time.cpp  (+5 more)
tests/framework/: test_framework.hpp
web/: package.json  tsconfig.json
web/src/: main.ts
(+27 files in other folders)
